# OS_labs

./: CMakeLists.txt  philosophers.c  readerswriters.c
Lab1/: CMakeLists.txt  barber.c  philosophers.c  prodcons.c
Lab2/: CMakeLists.txt  hardlinks.c  ls.c  lsdrives.c  mydir.c  vec.h
